--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
-  "name": "md-links",
-  "version": "0.1.0"
+	"name": "md-links",
+	"version": "0.1.0",
+	"devDependencies": {
+		"jest": "^24.7.1"
+	},
+	"scripts": {
+		"test": "jest"
+	}
 }
